--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
-    "ts": "ts-node"
+    "ts": "ts-node",
+    "mock:server": "json-server ./mocks/mock-server-data.json --port 5000"
   },
   "devDependencies": {
     "@types/node": "18.17.17",
@@ -24,7 +25,8 @@
     "eslint-config-htmlacademy": "9.1.1",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "json-server": "^1.0.0-beta.3"
   },
   "type": "module",
   "engines": {
@@ -32,7 +34,9 @@
     "npm": ">=8"
   },
   "dependencies": {
-    "chalk": "^5.4.1"
+    "chalk": "^5.4.1",
+    "dayjs": "^1.11.13",
+    "got": "^14.4.7"
   },
   "prettier": {
     "singleQuote": true,
