--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "main.js",
   "scripts": {
     "start": "npm run build && node ./dist/main.js",
+    "start:dev": "npm run ts ./dist/main.six-cities-app.js | pino-pretty --colorize --translateTime SYS:standard",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
@@ -18,15 +19,19 @@
     "mock:server": "json-server ./mocks/mock-server-data.json --port 5000"
   },
   "devDependencies": {
+    "@types/convict": "^6.1.6",
+    "@types/convict-format-with-validator": "^6.0.5",
     "@types/node": "18.17.17",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
+    "json-server": "^1.0.0-beta.3",
+    "pino-pretty": "^13.0.0",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2",
-    "json-server": "^1.0.0-beta.3"
+    "tslib": "^2.8.1",
+    "typescript": "5.2.2"
   },
   "type": "module",
   "engines": {
@@ -35,8 +40,14 @@
   },
   "dependencies": {
     "chalk": "^5.4.1",
+    "convict": "^6.2.4",
+    "convict-format-with-validator": "^6.2.0",
     "dayjs": "^1.11.13",
-    "got": "^14.4.7"
+    "dotenv": "^16.5.0",
+    "got": "^14.4.7",
+    "inversify": "^7.5.1",
+    "pino": "^9.6.0",
+    "reflect-metadata": "^0.2.2"
   },
   "prettier": {
     "singleQuote": true,
