--- a/package.json
+++ b/package.json
@@ -39,13 +39,15 @@
     "npm": ">=8"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^12.15.1",
     "chalk": "^5.4.1",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "got": "^14.4.7",
-    "inversify": "^7.5.1",
+    "inversify": "^6.0.2",
+    "mongoose": "^8.14.2",
     "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2"
   },
