--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "main.js",
   "scripts": {
     "start": "npm run build && node ./dist/main.js",
-    "start:dev": "npm run ts ./dist/main.six-cities-app.js | pino-pretty --colorize --translateTime SYS:standard",
+    "start:dev": "nodemon",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
@@ -48,6 +48,7 @@
     "got": "^14.4.7",
     "inversify": "^6.0.2",
     "mongoose": "^8.14.2",
+    "nodemon": "^3.1.10",
     "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2"
   },
