doonne done done done done

--- a/specification/specification.yml
+++ b/specification/specification.yml
@@ -166,6 +166,8 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/commentResponse"
+
+  /comments:
     post:
       tags:
         - rent-offers
@@ -396,7 +398,7 @@ components:
             - usual
             - pro
 
-      required: [email, firstname, password, type]
+      required: [email, firstname, password, types]
 
     user:
       type: object
@@ -420,7 +422,7 @@ components:
             - usual
             - pro
 
-      required: [email, firstname, avatarPath, type]
+      required: [email, firstname, avatarPath, types]
 
     loginUser:
       type: object
