--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/convict": "^6.1.6",
     "@types/convict-format-with-validator": "^6.0.5",
     "@types/express": "^5.0.1",
+    "@types/mime-types": "^2.1.4",
+    "@types/multer": "^1.4.12",
     "@types/node": "18.17.17",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -53,7 +55,10 @@
     "got": "^14.4.7",
     "http-status-codes": "^2.3.0",
     "inversify": "^6.0.2",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.14.2",
+    "multer": "^1.4.5-lts.2",
+    "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
     "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2"
